--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li>
             <h3>Unique Designs: </h3>
-            <p>Our necklaces are made with the highest quality materials and are designed to last a lifetime.</p>
+            <p>Our necklaces are made with the highest and shining quality materials and are designed to last a lifetime.</p>
         </li>
         <li>
             <h3>Exceptional Quality: </h3>
