--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </li>
         <li>
             <h3>Exceptional Quality: </h3>
-            <p>We prioritize craftsmanship and use long-lasting materials to create necklaces that become cherished keepsakes.</p>
+            <p>We prioritize professional craftsmanship and use long-lasting materials to create necklaces that become cherished keepsakes.</p>
         </li>
         <li>
             <h3>Empowering Inspiration: </h3>
