replaced changed to engineered

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <h3>Empowering Inspiration: </h3>
-            <p>Each necklace design is thoughtfully created to evoke a sense of confidence, self-expression, and individuality.</p>
+            <p>Each necklace design is thoughtfully engineered to evoke a sense of confidence, self-expression, and individuality.</p>
         </li>
     </ul>
     <h2>To our customers: </h2>
